<resources>

    <string name="google_api_key">AIzaSyAagrG-jioKLFxhWJFcm77fCdHtC-5rt-0</string>
    <string name="app_name">CarRental</string>

    <string name="splash_text">Excess Insurance for Rental Cars</string>

    <string name="GOT_IT">GOT IT</string>
    <string name="illustration_title1">Excess Insurance \n for rental cars</string>
    <string name="illustration_subtitle1">Excess Insurance for Rental Cars</string>
    <string name="illustration_content1">CoverEx is easy to use and only takes a few minutes to activate.</string>
    <string name="illustration_title2">Stay covered \n and Save money</string>
    <string name="illustration_subtitle2"></string>
    <string name="illustration_content2">One subscription gives you multiple rental coverages </string>

    <string name="coverage_title">My Coverage</string>
    <string name="coverage_empty_title">Rental Coverage</string>
    <string name="coverage_empty_content">One subscription gives you multiple rental coverages</string>
    <string name="coverage_is_not_existing">Active coverage is not existing</string>

    <string name="coverage_expired_title">Your coverage finished</string>
    <string name="no_remainingtime">0d 00h 00m</string>


    <string name="history_title">History</string>
    <string name="empty_history">Your coverage activity ( Coverages and claims ) will show up here.</string>

    <string name="account_title">Account</string>
    <string name="record_car_description">Record a video around the car to show the current state of the vehicle. This will allow for faster responses in the future if you need to submit a claim. </string>

    <string name="add_damage_image_description">e.g.Front glass broken and front bumper</string>
    <string name="one_claim_active">1 Claim Active</string>
    <string name="one_claim_resolved">1 Claim Resolved</string>

    <string name="euro_character">€</string>
    <string name="usd_character">$</string>
    <string name="app_record">Rec</string>
    <string name="app_record_stop">Stop</string>
    <string name="app_record_done">Done</string>
    <string name="app_record_cancel">Cancel</string>

    <string name="text_claim_state_not_approved">Revenue claim not approved</string>
    <string name="text_claim_state_expert_undergoing">Experts analysis is undergoing…</string>
    <string name="text_claim_state_incomplete">Please complete the missing information</string>
    <string name="text_claim_state_approved">Claim Approved</string>
    <string name="text_claim_state_pending">Pending Review</string>

    <string name="claim_question_what_happened">What happened &#128543;?</string>
    <string name="claim_question_when_happened">When this happened?</string>
    <string name="claim_question_where_happened">Where this happened?</string>
    <string name="claim_question_damaged_part">What part of the car is damaged?</string>
    <string name="claim_question_take_a_video">Take a video of the damages...</string>
    <string name="claim_question_else">Anything else you\'d like us to know?</string>

    <string name="file_a_claim_answer_what_happened_text_title_select_answer">Select answer</string>
    <string name="file_a_claim_answer_what_happened_text_title_your_description">Your description</string>
    <string name="file_a_claim_answer_when_happened_text_title">Select date</string>
    <string name="file_a_claim_answer_where_happened_text_title">Select location</string>
    <string name="file_a_claim_answer_damaged_part">Select image</string>
    <string name="file_a_claim_answer_take_video">Take video</string>

    <string name="validation_user_name_empty">User name is empty.</string>
    <string name="validation_email_empty">Email address is empty.</string>
    <string name="validation_mobile_empty">Mobile number is empty.</string>
    <string name="validation_wrong_email">Email address is incorrect.</string>
    <string name="validation_wrong_phonenumber">Phone number is incorrect.</string>

    <string name="default_message_title">Notification</string>
    <string name="drop_down_list_symbol_character">▼</string>

    <!-- Error messages of server connection -->
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="message_no_response">No response from server.</string>


    <!-- Error messages for empty fields -->
    <string name="required_name">Please input name.</string>
    <string name="required_phone_number">Please input phone number.</string>

    <string name="broken_glasses">Broken glasses</string>
    <string name="price_for_broken_glass_coverage">2.50 € / mo</string>

    <string name="description_for_broken_glass_coverage">Pays for covered damage to your vehicle caused by anything other than an accident.</string>

    <string name="claim_reason_car_accident">Car Accident</string>
    <string name="claim_reason_car_stolen">My car was stolen</string>
    <string name="claim_reason_rock_hit_glass">A rock hit my glass</string>
    <string name="claim_reason_natural_hazard">Natural hazard</string>
    <string name="claim_reason_other_reason">+Other reason</string>

    <string name="enter_verification_code">Enter validation code</string>

    <string name="incorrect_verficiation_code">Incorrect code, please try again</string>

    <string name="message_company_id_is_missing">Please select a company.</string>
    <string name="message_address_is_missing">Couldn\'t get your current address.</string>
    <string name="message_enddate_is_missing">Please select your end date.</string>
    <string name="message_startdate_is_missing">Please select your start date.</string>
    <string name="message_period_is_not_correct">Please select valid date range.</string>

    <string name="message_input_what_happened">Select what happened to you.</string>
    <string name="message_input_when_happened">Select when this happened.</string>
    <string name="message_input_where_happened">Select where this happened.</string>

    <string name="message_invalid_claim_id">Invalid claim.</string>
    <string name="message_select_damaged_zone">Please select damaged parts.</string>
    <string name="message_video_is_not_valid">Recorded video is not valid.</string>


    <string name="rental_type_unlimited_rental">Unlimited rentals</string>

    <string name="pickup_date_is_past">Pickup date can’t be in the past</string>
    <string name="pickup_date_is_null">Select start date</string>
    <string name="dropoff_date_is_past">Drop off date can’t be before the pickup date.</string>

    <string name="start_coverage_title">Start covering your rental car now.</string>
    <string name="have_unlimited_coverage">You have unlimited coverages</string>
    <string name="powered_by">Powered by</string>
    <string name="habit_analyatics">Habit analyatics</string>
    <string name="press_back_again">Please click BACK again to exit</string>

    <string name="no_vehicle_types">Select your vehicle type.</string>
    <string name="no_service_area">Select your location.</string>

    <string name="video_play">▶</string>

    <string name="worldzone_us">United States</string>
    <string name="worldzone_europe">Europe</string>

    <string name="worldzone_us_ab">US</string>
    <string name="worldzone_europe_ab">EU</string>

    <string name="claim_date_is_future">Shouldn’t be in the future</string>

    <string name="message_service_is_not_defined">Service zone is not defined.</string>
    <string name="message_vehicletype_is_not_defined">Vehicle type is not defined.</string>



</resources>
