<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOnboardingBackcolor"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/imagebuttonillustrator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/illustration_car" />

        <TextView
            android:id="@+id/textillustrationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/sf_pro_text_semibold"
            android:text="@string/illustration_title1"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textillustrationSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sf_pro_text_bold"
            android:text="@string/illustration_subtitle1"
            android:textColor="@color/colorOnboardingTextColor" />

        <TextView
            android:id="@+id/textillustrationContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="39dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="35dp"
            android:fontFamily="@font/sf_pro_text_regular"
            android:lineSpacingExtra="8sp"
            android:text="@string/illustration_content1"
            android:textAlignment="center"
            android:textColor="@color/colorOnboardingTextColor" />

        <ImageButton
            android:id="@+id/buttonDot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:background="@null"
            android:src="@drawable/dot_1" />

        <TextView
            android:id="@+id/buttonGotit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:clickable="true"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/GOT_IT"
            android:textColor=" #7D38BB" />
    </LinearLayout>
</FrameLayout>