<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorOnboardingBackcolor"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/imagebuttonillustrator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="65dp"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_illustration_pig" />

        <TextView
            android:id="@+id/textillustrationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/sf_pro_text_semibold"
            android:text="@string/illustration_title2"
            android:textAlignment="center"
            android:textSize="22sp" />


        <TextView
            android:id="@+id/textillustrationContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="39dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="35dp"
            android:fontFamily="@font/sf_pro_text_regular"
            android:lineSpacingExtra="8sp"
            android:text="@string/illustration_content2"
            android:textAlignment="center"
            android:textColor="@color/colorOnboardingTextColor" />

    </LinearLayout>

    <TextView
        android:id="@+id/textview_company_name"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="right"
        android:gravity="bottom|right"
        android:textColor="@color/white"
        android:layout_marginTop="150dp"
        android:layout_marginRight="-50dp"
        android:rotation="270"

        android:text="@string/powered_by" />
    </FrameLayout>
</LinearLayout>