<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBack"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorNavigationBar">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/coverage_title"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="17sp" />

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorDivider" />

        <ImageButton
            android:id="@+id/coverageButtonContact"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:src="@drawable/ic_icon_contact"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="11dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/coverage_radius_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/button_back_to_onboarding"
                android:layout_width="124dp"
                android:layout_height="125dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="14dp"
                android:adjustViewBounds="true"
                android:background="@drawable/round_onboarding_125"
                android:cropToPadding="false"
                android:fadeScrollbars="false"
                android:scaleType="centerInside"
                android:padding="15dp"
                android:src="@drawable/illustration_car"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/sf_pro_display_bold"
                android:gravity="center_horizontal"
                android:text="@string/coverage_empty_title"
                android:textColor="@color/colorCoverageTitle"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="35dp"
                android:fontFamily="@font/sf_pro_text_regular"
                android:gravity="center_horizontal"
                android:text="@string/coverage_empty_content"
                android:textColor="@color/colorCoverageContent"
                android:textSize="13sp" />

            <Button
                android:id="@+id/button_learn_more"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="23dp"
                android:layout_marginBottom="23dp"
                android:background="@drawable/gradient_button"
                android:fontFamily="@font/sf_pro_display_regular"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:text="LEARN MORE"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/button_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="6dp"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_icon_info"/>

    </RelativeLayout>

</LinearLayout>
